Added hyper links- resources.html

--- a/resources.html
+++ b/resources.html
@@ -12,7 +12,8 @@
         <h1>Duwamish Tribe: Seattle's Indigenous Legacy</h1>
         
     </header>
-<h2> Home / About / History / Present / Land Today / Resources (will link these later)</h2>
+<h2><a href="https://github.com/buaamer81/GitHub-Web-Page-Project">Home</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/about.html">About</a> /
+    <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/history.html">History</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/present.html">Present</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/landtoday.html">Land Today</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/resources.html">Resources</a></h2>
 <h3>Resources</h3>
 <section id="Resources">
     <p><a href="https://www.duwamishtribe.org/history">“History of the Duwamish People.” - Duwamish Tribe</a></p>
