--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
         <h1>Duwamish Tribe: Seattle's Indigenous Legacy</h1>
         
     </header>
-<h2> Home / About / History / Present / Land Today / Resources (will link these later)</h2>
+<h2><a href="https://github.com/buaamer81/GitHub-Web-Page-Project">Home</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/about.html">About</a> /
+    <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/history.html">History</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/present.html">Present</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/landtoday.html">Land Today</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/resources.html">Resources</a>
+</h2>
 <h3>Explore the vibrant history and present of the Duwamish tribe — the original inhabitants of Seattle.</h3>
     <main>
         The Duwamish (dxʷdəwʔabš) are a tribe of Indigenous people whose territories comprise regions within present-day Western Washington and the Puget Sound area. Known as the “host tribe for Seattle,” their history and culture has informed much of past and present Western Washington, including the significance and naming of many of the area’s cities, towns, and landmarks. The Duwamish tribe itself is considered self-identified yet not federally recognized, although many members of the larger Duwamish claim federal recognition through other tribes. This website aims to delve more deeply into the history and culture of the Duwamish people, their current presence in the area, and the status of and concerns regarding their land ownership in the region.
@@ -21,7 +23,7 @@
             
         </section>
 
-        <p1> picture here</p1>
+        <h1> picture here</h1>
 
     </main>
 
