--- a/present.html
+++ b/present.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duwamish present-day</title>
+    <title>Duwamish Present-Day</title>
     
 </head>
-<body>
+<body style="background-image:  linear-gradient(rgba(255, 255, 255, 0.845), rgba(255, 255, 255, 0.826)), url('https://images.squarespace-cdn.com/content/v1/5d744c68218c867c14aa5531/d6dc4430-8f12-4a49-8388-bde8c4b7f1b0/05+Logo+DRCC++Circular+paddle+-+black.png?format=1500w');">
 
     <header>
         <h1>Duwamish Tribe: Seattle's Indigenous Legacy</h1>
