--- a/history.html
+++ b/history.html
@@ -6,18 +6,17 @@
     <title>Duwamish History</title>
     
 </head>
-<body>
-
+<body style="background-image:  linear-gradient(rgba(255, 255, 255, 0.845), rgba(255, 255, 255, 0.826)), url('https://images.squarespace-cdn.com/content/v1/5d744c68218c867c14aa5531/d6dc4430-8f12-4a49-8388-bde8c4b7f1b0/05+Logo+DRCC++Circular+paddle+-+black.png?format=1500w');"
+>
     <header>
-        <h1>Duwamish Tribe: Seattle's Indigenous Legacy</h1>
-        
+        <h1>Duwamish Tribe: Seattle's Indigenous Legacy</h1>        
     </header>
 <h2> <a href="https://github.com/buaamer81/GitHub-Web-Page-Project">Home</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/about.html">About</a> /
     <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/history.html">History</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/present.html">Present</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/landtoday.html">Land Today</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/resources.html">Resources</a>
 </h2>
 <h3>Explore the vibrant history and present of the Duwamish tribe — the original inhabitants of Seattle.</h3>
      <section id="History">
-        <h3><img src="https://digitalcollections.lib.washington.edu/digital/api/singleitem/image/loc/1261/default.jpg" align="left"> <center>Origins</center></h3>
+        <h3><img src="https://digitalcollections.lib.washington.edu/digital/api/singleitem/image/loc/1261/default.jpg" align="left" style="margin: .5cm .5cm .5cm .5cm;"> <center>Origins</center></h3>
        <p2> The name “Duwamish” is an Anglo-Europeanized version of dxʷdəwʔabš, which translates in English to “people of the inside,” in reference to the tribe’s settlement along the area’s Duwamish, Cedar, and Black Rivers. With archaeological evidence suggesting habitation in the Duwamish watershed by humans as far back as 8,000 years ago, and Duwamish stories detailing events during the most recent ice age, the Duwamish have occupied the Puget Sound region for as long as history has been documented.</p2>
         <p>Born in 1780, Chief Si’ahl, for whom the city of Seattle is named, grew to become the most influential and historically renowned Duwamish chief. Si’ahl was recognized from a young age for his strength and fearlessness, and, as the child of a mother from the Duwamish tribe and a father from the Suquamish, grew to inherit a role as the chief of both tribes.</p>
         <p1>By the 1850s, Chief Si’ahl was celebrated more for his peaceful, diplomatic efforts rather than for his prowess in battle. When European immigrants arrived in the Americas in the mid-19th century, Si’ahl greeted them at Alki Point near Duwamish Head. The new European-American immigrants noted the efforts of Chief Si’ahl and the dxʷdəwʔabš in striving to live amicably alongside them. Si’ahl provided the immigrants with assistance and resources, such as lumber for canoes and dwellings; crops and agricultural labor; the teaching of survival skills; and collaboration in the creation of Henry Yesler’s first sawmill.</p1>
