--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duwamish History</title>
+    <title>Sources & Resources</title>
     
 </head>
 <body style="background-image:  linear-gradient(rgba(255, 255, 255, 0.845), rgba(255, 255, 255, 0.826)), url('https://images.squarespace-cdn.com/content/v1/5d744c68218c867c14aa5531/d6dc4430-8f12-4a49-8388-bde8c4b7f1b0/05+Logo+DRCC++Circular+paddle+-+black.png?format=1500w');"
@@ -23,7 +23,8 @@
     <p1><a href="https://www.duwamishtribe.org/culture-today">“Culture Today” Duwamish Tribe</a></p1>
    <p><a href="https://www.ala.org/aboutala/indigenous-tribes-seattle-and-washington">“Indigenous Tribes of Seattle and Washington”. American Library Association</a></p>
    <p1> <a href="https://www.historylink.org/File/20272">Updegrave, Cynthia. “Duwamish-Green Watershed” -Essay20272.</a></p1>
-   <h3>Help Support the Duwamish Tribe:</h3>
+   <p><a href="https://www.seattletimes.com/seattle-news/real-duwamish-seattles-first-people-and-the-bitter-fight-over-federal-recognition/">"‘Real’ Duwamish: Seattle’s first people and the bitter fight over federal recognition"-Seattle Times</a></p>
+    <h3>Help Support the Duwamish Tribe:</h3>
    <p1>Donate to Real Rent Duwamish to help offset the cost of rent <a href="https://www.realrentduwamish.org/">HERE</a></p1>
    <p>Sign the Petition for federal recognition <a href="https://www.change.org/p/federal-recognition-for-the-duwamish-tribe?recruited_by_id=6e1efaa0-7dc7-11eb-b698-63712cf77020&recruiter=1184346959&utm_campaign=psf_combo_share_initial&utm_content=cl_sharecopy_27187850_en-US%3A3&utm_medium=copylink&utm_source=share_petition&utm_term=psf_combo_share_initial">HERE</a></p>
         </section>
