--- a/present.html
+++ b/present.html
@@ -13,7 +13,7 @@
         
     </header>
 <h2> <a href="https://github.com/buaamer81/GitHub-Web-Page-Project">Home</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/about.html">About</a> /
-    <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/history.html">History</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/present.html">Present</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/landtoday.html">Land Today</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/resources.html">Resources</a></h2>
+    <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/history.html">History</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/present.html">Present</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/resources.html">Resources</a></h2>
 <h3>Explore the vibrant history and present of the Duwamish tribe — the original inhabitants of Seattle.</h3>
 <section id="Present">
         <h3><center>Present</center></h3>
