--- a/history.html
+++ b/history.html
@@ -11,8 +11,8 @@
     <header>
         <h1>Duwamish Tribe: Seattle's Indigenous Legacy</h1>        
     </header>
-<h2> <a href="https://github.com/buaamer81/GitHub-Web-Page-Project">Home</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/about.html">About</a> /
-    <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/history.html">History</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/present.html">Present</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/landtoday.html">Land Today</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/resources.html">Resources</a>
+<h2> <a href="https://github.com/buaamer81/GitHub-Web-Page-Project">Home</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/">About</a> /
+    <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/history.html">History</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/present.html">Present</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/landtoday.html">Land Today</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/resources.html">Resources</a>
 </h2>
 <h3>Explore the vibrant history and present of the Duwamish tribe — the original inhabitants of Seattle.</h3>
      <section id="History">
