--- a/landtoday.html
+++ b/landtoday.html
@@ -12,8 +12,8 @@
         <h1>Your Web Page Header</h1>
         
     </header>
-<h2><a href="https://github.com/buaamer81/GitHub-Web-Page-Project">Home</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/about.html">About</a> /
-    <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/history.html">History</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/present.html">Present</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/landtoday.html">Land Today</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/resources.html">Resources</a></h2>
+<h2><a href="https://buaamer81.github.io/GitHub-Web-Page-Project/">Home</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/about.html">About</a> /
+    <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/history.html">History</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/present.html">Present</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/landtoday.html">Land Today</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/resources.html">Resources</a></h2>
     <main>
         <!-- Your main content goes here -->
         <section id="home">
