--- a/resources.html
+++ b/resources.html
@@ -12,8 +12,8 @@
         <h1>Duwamish Tribe: Seattle's Indigenous Legacy</h1>
     </header>
     
-<h2><a href="https://github.com/buaamer81/GitHub-Web-Page-Project">Home</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/about.html">About</a> /
-    <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/history.html">History</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/present.html">Present</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/landtoday.html">Land Today</a> / <a href="https://github.com/buaamer81/GitHub-Web-Page-Project/blob/main/resources.html">Resources</a></h2>
+<h2><a href="https://buaamer81.github.io/GitHub-Web-Page-Project/">Home</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/about.html">About</a> /
+    <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/history.html">History</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/present.html">Present</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/landtoday.html">Land Today</a> / <a href="https://buaamer81.github.io/GitHub-Web-Page-Project/resources.html">Resources</a></h2>
     <img src="https://images.squarespace-cdn.com/content/v1/5d744c68218c867c14aa5531/1624651038283-OC94ZOF6WYSK5VRM3E5G/stan%2Bwith%2Bthe%2Bduwamish.jpg?format=2500w" align="left">
     <h3>Sources:</h3>
 <section id="Resources">
